# velos

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
crates/auth/src/: lib.rs
crates/models/fluorite/: velos.fl
crates/models/src/: lib.rs
crates/runtime/src/: lib.rs
crates/scheduler/src/: lib.rs
crates/server/src/: controllers.rs  lib.rs
crates/tests/tests/: e2e.rs
crates/veloslet/src/: client.rs  daemon.rs  host.rs  main.rs
docs/: getting-started.md
docs/superpowers/plans/: 2026-06-27-fleet-phase1-control-plane-spine.md  2026-06-27-velos-phase1-control-plane-spine.md  2026-07-11-velos-node-relative-placement.md
docs/superpowers/specs/: 2026-06-27-fleet-design.md  2026-06-27-velos-design.md  2026-07-11-velos-node-relative-placement-design.md  2026-07-11-worker-info-join-tokens-design.md
web/: package-lock.json  package.json
web/src/: api.ts  types.ts
web/src/views/: Tokens.tsx  Workers.tsx
