[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["shawn <zxgshawn@gmail.com>"]
repository = "https://github.com/blossomstack/sandbox"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
wildcard_enum_match_arm = "deny"
